# BokutachiHook

./: .gitignore  .gitmodules  BokutachiHook.sln  BokutachiHook.vcxproj  BokutachiHook.vcxproj.filters  CMakeLists.txt  LICENCE  README.md  libcurl.vcxproj  libcurl.vcxproj.filters  vcpkg-configuration.json  vcpkg.json
BokutachiHook/: CMakeLists.txt
BokutachiHook/include/BokutachiHook/: JSON.h  framework.h  mem.h  winver.h
BokutachiHook/src/: dllmain.cpp  mem.cpp
BokutachiLauncher/: CMakeLists.txt
BokutachiLauncher/include/BokutachiLauncher/: GetAuth.h  Injector.h  LaunchGame.h
BokutachiLauncher/src/: GetAuth.cpp  Injector.cpp  LaunchGame.cpp  Main.cpp
include/: BokutachiHook.hpp  Version.hpp
src/: BokutachiHook.cpp  Version.cpp  dllmain.cpp
